--- a/CashaWeb/Casha.BLL/Casha.BLL.csproj
+++ b/CashaWeb/Casha.BLL/Casha.BLL.csproj
@@ -11,4 +11,9 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Casha.Core\Casha.Core.csproj" />
+    <ProjectReference Include="..\Casha.DAL\Casha.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
