--- a/CashaWeb/CashaWeb/CashaWeb.csproj
+++ b/CashaWeb/CashaWeb/CashaWeb.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Casha.BLL\Casha.BLL.csproj" />
+    <ProjectReference Include="..\Casha.Core\Casha.Core.csproj" />
+    <ProjectReference Include="..\Casha.DAL\Casha.DAL.csproj" />
   </ItemGroup>
 
 </Project>
