--- a/CashaWeb/Casha.Core/Casha.Core.csproj
+++ b/CashaWeb/Casha.Core/Casha.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DbModels\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
   </ItemGroup>
 
 </Project>
