created dbcontext and identity

--- a/CashaWeb/CashaWeb/appsettings.json
+++ b/CashaWeb/CashaWeb/appsettings.json
@@ -1,4 +1,4 @@
-{
+{  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : ""    // database connection string goes here
+    "DefaultConnection": "Data Source=87.244.132.50\\DEV;Initial Catalog=CashaDB;User ID=user1;Password=1111" // database connection string goes here
   },
 
   "AllowedHosts": "*"
