Added registration service with registration logic and when adding user we also add to the table UserRoles which role he has

--- a/CashaWeb/Casha.BLL/Casha.BLL.csproj
+++ b/CashaWeb/Casha.BLL/Casha.BLL.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\Новая папка\**" />
+    <EmbeddedResource Remove="Services\Новая папка\**" />
+    <None Remove="Services\Новая папка\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
