Add JWT token configuration

--- a/CashaWeb/CashaWeb/appsettings.json
+++ b/CashaWeb/CashaWeb/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=87.244.132.50\\DEV;Initial Catalog=CashaDB;User ID=user1;Password=1111" // database connection string goes here
   },
+  "Jwt": {
+    "Issuer": "",
+    "Audience": "",
+    "Key": "Long Unknown Secret Word"
+  }
 
   "AllowedHosts": "*"
 }
