Added GetUser API request

--- a/CashaWeb/CashaWeb/CashaWeb.csproj
+++ b/CashaWeb/CashaWeb/CashaWeb.csproj
@@ -17,17 +17,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Casha.BLL\Casha.BLL.csproj" />
     <ProjectReference Include="..\Casha.Core\Casha.Core.csproj" />
     <ProjectReference Include="..\Casha.DAL\Casha.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
