--- a/CashaWeb/Casha.BLL/Casha.BLL.csproj
+++ b/CashaWeb/Casha.BLL/Casha.BLL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Casha.Core\Casha.Core.csproj" />
     <ProjectReference Include="..\Casha.DAL\Casha.DAL.csproj" />
   </ItemGroup>
