--- a/CashaWeb/CashaWeb/appsettings.json
+++ b/CashaWeb/CashaWeb/appsettings.json
@@ -1,19 +1,21 @@
-{  
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=178.165.88.5\\DEV;Initial Catalog=CashaDB;User ID=user1;Password=1111" // database connection string goes here
   },
+
   "Jwt": {
-    "Issuer": "",
-    "Audience": "",
+    "Issuer": "https://localhost:7128",
+    "Audience": "https://localhost:7128",
     "Key": "Long Unknown Secret Word",
     "Duration": "1"
-  }
+  },
 
   "AllowedHosts": "*"
 }
