Added AccountController and changing of password, added email to UserViewModel

--- a/CashaWeb/CashaWeb/CashaWeb.csproj
+++ b/CashaWeb/CashaWeb/CashaWeb.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Casha.DAL\Casha.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ApiModels\" />
+  </ItemGroup>
+
 </Project>
